--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-project-backend",
+  "name": "mobile-app-project-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
